syntax = "proto3";
option go_package = "github.com/yubo/falcon/modules/transfer";
package transfer;

import "google/api/annotations.proto";
import "lib/tsdb/tsdb.proto";
import "modules/service/service.proto";

message DataPoint {
	bytes key = 1;
	tsdb.TimeValuePair value = 2; 
}

message DataPoints {
	bytes key = 1;
	repeated tsdb.TimeValuePair values = 2; 
}


message PutRequest {
	repeated DataPoint data = 1;
}

message PutResponse {
	int32  n = 1; // Actual number of objects success process
}

message GetRequest {
	repeated bytes keys = 1;
	int64 start = 2;
	int64 end = 3;
	service.Cf consolFun = 4;
}

message GetResponse {
	repeated DataPoints data = 1; 
}

message Empty {
}

message Stats {
	repeated uint64 counter = 1;
}

message StatsName {
	repeated bytes counterName = 1;
}

service Transfer {
	rpc Put(PutRequest) returns (PutResponse) {
		option (google.api.http) = {
			post: "/v1.0/put"
			body: "*"
		};
	}

	rpc Get(GetRequest) returns (GetResponse) {
		option (google.api.http) = {
			post: "/v1.0/get"
			body: "*"
		};
	}

	rpc GetStats(Empty) returns (Stats) {
		option (google.api.http) = {
			get: "/v1.0/stats"
		};
	};

	rpc GetStatsName(Empty) returns (StatsName) {
		option (google.api.http) = {
			get: "/v1.0/stats_name"
		};
	};
}

